--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
                         </span>
                         <span class="fa-stack ">
                             <a href="https://www.linkedin.com/company/automatizacion-dise-o-y-desarrollo-sa/" target=”_blank”>
-                                <img src="images/linkedin.png" alt="LinkedIn">
+                                <img src="images/linkedIn.png" alt="LinkedIn">
                             </a>
                         </span>
                         <span class="fa-stack ">
