--- a/efactura.html
+++ b/efactura.html
@@ -82,7 +82,7 @@
     <!-- end of navbar -->
     <!-- end of navigation -->
 
-    <div class="container solutions-sections-grey">
+    <div class="container solutions-sections">
         <div class="row">
             <div class="col-lg-12">
                 <h1>¿Qué es la factura electrónica?</h1>
