--- a/erp.html
+++ b/erp.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="ADD S.A. es una empresa que cuenta con más de 20 años de experiencia en el área de .....">
+    <meta name="description" content="Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer por ellos.">
     <meta name="author" content="ADD S.A.">
 
     <!-- Webpage Title -->
@@ -60,15 +60,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nosotros</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="nosotros.html#historia">Historia</a>
+                            <a class="dropdown-item" href="nosotros.html#historia">Quienes somos</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="nosotros.html#misionvision">Misión y Visión</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="nosotros.html#principios">Principios</a>
                         </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Novedades</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="index.html#contact">Contacto</a>
@@ -767,14 +764,10 @@
                 <div class="col-lg-12 ">
                     <div class="footer-col first ">
                         <h6>Sobre ADD</h6>
-                        <p class="p-small ">ADD S.A. es una empresa que cuenta con más de 20 años de experiencia en el área de .....</p>
+                        <p class="p-small ">Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer por ellos.</p>
                     </div>
                     <!-- end of footer-col -->
                     <div class="footer-col second ">
-                        <h6>Links</h6>
-                        <ul class="list-unstyled li-space-lg p-small ">
-                            <li>Importantes: <a href="https://addsa.com.ar/contactenos.html">Bienvenidos</a>, <a href="https://addsa.com.ar/nosotros.html">Organización</a></li>
-                        </ul>
                     </div>
                     <!-- end of footer-col -->
                     <div class="footer-col third ">
@@ -794,7 +787,7 @@
                             </a>
                         </span>
                         <span class="fa-stack ">
-                            <a href="https://www.youtube.com/" target=”_blank”>
+                            <a href="https://www.youtube.com/channel/UCyVjJ3sb0DQbMXDPv6CfxCg" target=”_blank”>
                                 <img src="images/youtube.png" alt="YouTube">
                             </a>
                         </span>
