--- a/nosotros.html
+++ b/nosotros.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="ADD S.A. es una empresa que cuenta con más de 20 años de experiencia en el área de .....">
+    <meta name="description" content="Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer por ellos.">
     <meta name="author" content="ADD S.A.">
 
     <!-- Webpage Title -->
@@ -60,15 +60,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nosotros</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="nosotros.html#historia">Historia</a>
+                            <a class="dropdown-item" href="nosotros.html#historia">Quienes somos</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="nosotros.html#misionvision">Misión y Visión</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="nosotros.html#principios">Principios</a>
                         </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Novedades</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="index.html#contact">Contacto</a>
@@ -87,24 +84,20 @@
         <div class="container solutions-sections">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>HISTORIA</h2>
+                    <h2>QUIENES SOMOS</h2>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Velit dignissim sodales ut eu. Dolor sit amet consectetur adipiscing elit duis. Viverra suspendisse potenti
-                        nullam ac tortor vitae purus. Ultrices mi tempus imperdiet nulla malesuada. Senectus et netus et malesuada fames. Et pharetra pharetra massa massa ultricies mi quis hendrerit dolor. Ac ut consequat semper viverra nam libero justo
-                        laoreet sit. Id interdum velit laoreet id donec ultrices tincidunt arcu. Nec feugiat in fermentum posuere urna nec tincidunt praesent. Nibh sit amet commodo nulla facilisi nullam vehicula ipsum a.</p>
-                    <p>Pulvinar elementum integer enim neque volutpat ac tincidunt vitae semper. Convallis a cras semper auctor neque vitae tempus. Cras semper auctor neque vitae tempus quam pellentesque. Quis enim lobortis scelerisque fermentum dui faucibus
-                        in ornare quam. Eu feugiat pretium nibh ipsum. Tincidunt nunc pulvinar sapien et ligula ullamcorper. Suspendisse potenti nullam ac tortor vitae purus faucibus ornare suspendisse. Venenatis lectus magna fringilla urna porttitor
-                        rhoncus. Donec ac odio tempor orci dapibus ultrices in. Ornare quam viverra orci sagittis eu. Consectetur adipiscing elit ut aliquam purus sit amet luctus.</p>
-                    <p>Diam phasellus vestibulum lorem sed risus ultricies tristique. Elit duis tristique sollicitudin nibh sit amet commodo nulla facilisi. Nisi quis eleifend quam adipiscing vitae. Nisl tincidunt eget nullam non nisi est. Gravida arcu ac
-                        tortor dignissim. Odio tempor orci dapibus ultrices in. Suscipit adipiscing bibendum est ultricies integer quis auctor. Mattis pellentesque id nibh tortor id aliquet. Hac habitasse platea dictumst vestibulum. Sit amet mauris commodo
-                        quis imperdiet. At lectus urna duis convallis convallis tellus.</p>
-                    <p>Cursus metus aliquam eleifend mi in. Amet nisl suscipit adipiscing bibendum est. Massa sed elementum tempus egestas sed sed risus. Dui ut ornare lectus sit amet est placerat in egestas. Massa ultricies mi quis hendrerit dolor magna
-                        eget est. Magna etiam tempor orci eu lobortis elementum nibh tellus molestie. Suspendisse sed nisi lacus sed viverra tellus. Integer eget aliquet nibh praesent tristique magna sit amet. Congue nisi vitae suscipit tellus mauris.
-                        Aliquam faucibus purus in massa. Tellus orci ac auctor augue mauris augue neque. Mattis rhoncus urna neque viverra justo nec. Tempus urna et pharetra pharetra massa massa ultricies mi quis. Congue quisque egestas diam in arcu cursus
-                        euismod. Aliquam faucibus purus in massa tempor nec feugiat nisl. Nec nam aliquam sem et tortor.</p>
-                    <p>Lectus arcu bibendum at varius vel pharetra vel turpis. Sem et tortor consequat id porta nibh. Ornare arcu dui vivamus arcu felis bibendum ut. Vitae tortor condimentum lacinia quis vel. Ut faucibus pulvinar elementum integer enim neque
-                        volutpat. Porta lorem mollis aliquam ut porttitor leo a diam sollicitudin. Luctus accumsan tortor posuere ac. Consectetur libero id faucibus nisl tincidunt eget nullam. Lacus vel facilisis volutpat est velit egestas dui. Iaculis
-                        eu non diam phasellus. Fusce id velit ut tortor pretium. Sagittis purus sit amet volutpat consequat mauris. Augue neque gravida in fermentum.</p>
+                    <p><b>Somos apasionados por la tecnología.</b> Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer por ellos.</p>
+                    <p>Desde hace más de 30 años -incluso antes de ser ADD- estamos haciendo lo que sabemos hacer mejor: programando soluciones y uniendo objetos físicos con software (que ahora tiene un nombre, “internet de las cosas”, IdC, o IoT por sus
+                        siglas en inglés “Internet of Things”). </p>
+                    <p>Fuimos pioneros en sistemas de parking con código de barras, en telepeaje en 1995, en nuestra solución de factura electrónica en el 2006. Nos enorgullece decir que conjugamos la <b>solidez</b> de <b>muchos años de experiencia</b> con
+                        la <b>velocidad</b> de cambio necesaria para <b>adaptar continuamente nuestras soluciones</b> y ofrecer siempre opciones de avanzada.</p>
+                    <p><b>No ofrecemos sólo software:</b> ADD está conformada por un equipo de profesionales no sólo de diferentes ramas de sistemas y ciencias de la computación, sino también con conocimiento de procesos productivos, contabilidad, impuestos,
+                        comercialización y cadenas de suministro. Con estudios académicos y experiencia a nivel nacional e internacional, combinamos el conocimiento teórico y práctico de las empresas, con la capacidad para desarrollar soluciones a esos
+                        desafíos. Por eso nuestras soluciones se encuentran operando exitosamente desde hace años en los segmentos más diversos.</p>
+                    <p>Entendemos que <b>cada empresa es única</b>: conformamos el equipo de trabajo para cada proyecto según las circunstancias y los requerimientos necesarios y tenemos en cuenta no sólo parámetros operativos sino también a su posición
+                        financiera, económica, administrativa y jurídica. Evitamos pautas estandarizadas, pues creemos que cada caso merece ser analizado y tratado por sus rasgos propios, que deben ser valorados para planificar y brindar el servicio necesario,
+                        sin incurrir en costos o demoras innecesarias.</p>
+                    <p><b>Sea cual sea la solución que busca, cuente con nosotros, cuente con ADD.</b></p>
                 </div>
                 <!-- end of col -->
             </div>
@@ -119,12 +112,18 @@
         <div class="container bg-gray solutions-sections">
             <div class="row ">
                 <div class="col-lg-6 ">
+                    <div class="card-image">
+                        <img class="img-fluid" src="images/Mission.png" alt="Mission" height="150px" width="150px">
+                    </div>
                     <h2 class="h2-heading ">MISIÓN</h2>
                     <br>
                     <p>Proteger la inversión de nuestros clientes, extendiendo las soluciones que brindamos con nuevas funcionalidades y tecnologías.</p>
                 </div>
                 <!-- end of col -->
                 <div class="col-lg-6 ">
+                    <div class="card-image">
+                        <img class="img-fluid" src="images/Vision.png" alt="Vision" height="150px" width="150px">
+                    </div>
                     <h2 class="h2-heading ">VISIÓN</h2>
                     <br>
                     <p>Ser el proveedor de software elegido por las empresas por ser el que más valor les aporta en la optimización de su gestión estratégica.</p>
@@ -177,7 +176,8 @@
                             <div class="media-body">
                                 <h5>Agregamos valor</h5>
                                 <p>A nuestros clientes a través de la optimización por medio de software y automatización de los diferentes procesos que llevan a cabo y a nuestra propia empresa a través de la mejora continua de nuestros procesos y de nuestro
-                                    crecimiento.</p>
+                                    crecimiento.
+                                </p>
                             </div>
                         </li>
                         <li class="media">
@@ -210,14 +210,10 @@
                 <div class="col-lg-12 ">
                     <div class="footer-col first ">
                         <h6>Sobre ADD</h6>
-                        <p class="p-small ">ADD S.A. es una empresa que cuenta con más de 20 años de experiencia en el área de .....</p>
+                        <p class="p-small ">Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer por ellos.</p>
                     </div>
                     <!-- end of footer-col -->
                     <div class="footer-col second ">
-                        <h6>Links</h6>
-                        <ul class="list-unstyled li-space-lg p-small ">
-                            <li>Importantes: <a href="https://addsa.com.ar/contactenos.html">Bienvenidos</a>, <a href="https://addsa.com.ar/nosotros.html">Organización</a></li>
-                        </ul>
                     </div>
                     <!-- end of footer-col -->
                     <div class="footer-col third ">
@@ -237,7 +233,7 @@
                             </a>
                         </span>
                         <span class="fa-stack ">
-                            <a href="https://www.youtube.com/" target=”_blank”>
+                            <a href="https://www.youtube.com/channel/UCyVjJ3sb0DQbMXDPv6CfxCg" target=”_blank”>
                                 <img src="images/youtube.png" alt="YouTube">
                             </a>
                         </span>
