--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <link href="css/swiper.css" rel="stylesheet">
     <link href="css/magnific-popup.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
-    <link href="css/contact-form.css" rel="stylesheet">
 
     <!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
@@ -336,40 +335,9 @@
                 </div>
                 <!-- end of col -->
                 <div class="col-lg-6 ">
-
                     <!-- Contact Form -->
-                    <form>
-                        <div class="form-group ">
-                            <input type="text " class="form-control-input " id="cname " required>
-                            <label class="label-control " for="cname ">Nombre</label>
-                        </div>
-                        <div class="form-group ">
-                            <input type="email " class="form-control-input " id="cemail " required>
-                            <label class="label-control " for="cemail ">Mail</label>
-                        </div>
-                        <div class="form-group ">
-                            <input type="text " class="form-control-input " id="ccountry " required>
-                            <label class="label-control " for="ccountry ">País</label>
-                        </div>
-                        <div class="form-group">
-                            <select class="form-control-select" id="rselect" required>
-                                <option class="select-option" value="" disabled selected>Solución...</option>
-                                <option class="select-option" value="ERP">ERP</option>
-                                <option class="select-option" value="Parking">Parking</option>
-                                <option class="select-option" value="E-Factura">Factura electrónica</option>
-                                <option class="select-option" value="Solucion-a-medida">Solución a medida</option>
-                            </select>
-                        </div>
-                        <div class="form-group ">
-                            <textarea class="form-control-textarea " id="cmessage " required></textarea>
-                            <label class="label-control " for="cmessage ">Mensaje</label>
-                        </div>
-                        <div class="form-group ">
-                            <button type="submit " class="form-control-submit-button ">Submit</button>
-                        </div>
-                    </form>
+                    <iframe src="https://worker.kwarp7.net/IO/PCF.aspx" title="description"></iframe>
                     <!-- end of contact form -->
-
                 </div>
                 <!-- end of col -->
             </div>
