--- a/erp.html
+++ b/erp.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer por ellos.">
+    <meta name="description" content="Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer.">
     <meta name="author" content="ADD S.A.">
 
     <!-- Webpage Title -->
@@ -111,8 +111,8 @@
                     <li class="media">
                         <div class="media-body">
                             <h5>2. Flexibilidad y posibilidades de ampliar la escala</h5>
-                            <p>KwARP-ERP es el ERP más flexible del mercado, y se encuentra en funcionamiento en las empresas más variadas. Con nuestra solución se emiten XX facturas a diario en más de YY empresas con foco comercial, productivo, logístico,
-                                etc. Su negocio crece, y KwARP-ERP lo acompaña.</p>
+                            <p>KwARP-ERP es el ERP más flexible del mercado, y se encuentra en funcionamiento en las empresas más variadas. Con nuestra solución, cientos de empresas de los más variados rubros, emiten cientos de miles de facturas mensualmente.
+                                Su negocio crece, y KwARP-ERP lo acompaña, sea a través de la contratación de un paquete que permite más usuarios concurrentes, sea a través de la incorporación de nuevos módulos.</p>
                         </div>
                     </li>
                     <li class="media">
@@ -126,8 +126,8 @@
                         <div class="media-body">
                             <h5>4. Tiempo de implementación</h5>
                             <p>Dependerá de la empresa, la complejidad de sus procesos de negocios y sus necesidades particulares. Existen implementaciones exitosas realizadas en sesenta días y proyectos que pueden requerir de seis a ocho meses. La implementación
-                                implica el relevamiento de la empresa, la puesta en marcha del producto y la capacitación del personal. Lo que normalmente recomendamos es avanzar en etapas, lo cual le permite a la organización ver resultados más rápidamente.
-                                Nuestro equipo profesional altamente calificado hace que nuestros plazos de implementación sean cortos comparados con los estándares del mercado.</p>
+                                implica el relevamiento de la empresa, la puesta en marcha del producto y la capacitación del personal (sea en forma personal o virtual). Lo que normalmente recomendamos es avanzar en etapas, lo cual le permite a la organización
+                                ver resultados más rápidamente. Nuestro equipo profesional altamente calificado hace que nuestros plazos de implementación sean cortos comparados con los estándares del mercado.</p>
                         </div>
                     </li>
                     <li class="media">
@@ -154,21 +154,20 @@
                     <li class="media">
                         <div class="media-body">
                             <h5>8. Disponibilidad de actualizaciones regulares</h5>
-                            <p>Nos mantenemos siempre atentos a los cambios legales e impositivos para ofrecerles una solución siempre vigente. Al ser una solución web, no es necesario que ustedes “bajen la nueva versión” en su máquina, siempre estará trabajando
-                                con un solución actualizada.</p>
+                            <p>Nos mantenemos siempre atentos a los cambios legales e impositivos para ofrecerles una solución siempre vigente. Al ser una solución web (cluod), siempre estará trabajando con una solución actualizada.</p>
                         </div>
                     </li>
                     <li class="media">
                         <div class="media-body">
                             <h5>9. Adaptación requerida</h5>
-                            <p>Cuente con nosotros también en caso de que las particularidades de su negocio requiera un desarrollo a medida.</p>
+                            <p>Cuente con nosotros también en caso de que las particularidades de su negocio hagan necesario un desarrollo a medida.</p>
                         </div>
                     </li>
                     <li class="media">
                         <div class="media-body">
                             <h5>10. Costo total, que incluye licencia del software, entrenamiento, implementación, adaptación y requisitos de hardware</h5>
-                            <p>La arquitectura web de KwARP-ERP reduce considerablemente el costo del hardware requerido. Su interfaz de usuario intuitiva y sus pantallas “tan simples como sea posible”, y la experiencia de nuestro equipo y socios estratégicos
-                                en procesos de implementación, acorta tanto tiempos como costos de implementación y entrenamiento.</p>
+                            <p>La arquitectura web de KwARP-ERP reduce considerablemente el costo del hardware requerido. Su interfaz de usuario intuitiva, sus pantallas “tan simples como sea posible”, y la experiencia de nuestro equipo y socios estratégicos,
+                                acorta tanto tiempos como costos de implementación y entrenamiento.</p>
                         </div>
 
                     </li>
@@ -698,7 +697,7 @@
 
             <div class="col-lg-12">
                 <br>
-                <h3>Interconexion</h3>
+                <h3>Interconexión</h3>
                 <br>
             </div>
             <div class="col-lg-4">
@@ -764,7 +763,7 @@
                 <div class="col-lg-12 ">
                     <div class="footer-col first ">
                         <h6>Sobre ADD</h6>
-                        <p class="p-small ">Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer por ellos.</p>
+                        <p class="p-small ">Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer.</p>
                     </div>
                     <!-- end of footer-col -->
                     <div class="footer-col second ">
