--- a/nosotros.html
+++ b/nosotros.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer por ellos.">
+    <meta name="description" content="Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer.">
     <meta name="author" content="ADD S.A.">
 
     <!-- Webpage Title -->
@@ -86,7 +86,7 @@
                 <div class="col-lg-12">
                     <h2>QUIENES SOMOS</h2>
                     <hr>
-                    <p><b>Somos apasionados por la tecnología.</b> Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer por ellos.</p>
+                    <p><b>Somos apasionados por la tecnología.</b> Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer.</p>
                     <p>Desde hace más de 30 años -incluso antes de ser ADD- estamos haciendo lo que sabemos hacer mejor: programando soluciones y uniendo objetos físicos con software (que ahora tiene un nombre, “internet de las cosas”, IdC, o IoT por sus
                         siglas en inglés “Internet of Things”). </p>
                     <p>Fuimos pioneros en sistemas de parking con código de barras, en telepeaje en 1995, en nuestra solución de factura electrónica en el 2006. Nos enorgullece decir que conjugamos la <b>solidez</b> de <b>muchos años de experiencia</b> con
@@ -210,7 +210,7 @@
                 <div class="col-lg-12 ">
                     <div class="footer-col first ">
                         <h6>Sobre ADD</h6>
-                        <p class="p-small ">Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer por ellos.</p>
+                        <p class="p-small ">Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer.</p>
                     </div>
                     <!-- end of footer-col -->
                     <div class="footer-col second ">
