--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer por ellos.">
+    <meta name="description" content="Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer.">
     <meta name="author" content="ADD S.A.">
 
     <!-- Webpage Title -->
@@ -334,9 +334,9 @@
                     </div>
                 </div>
                 <!-- end of col -->
-                <div class="col-lg-6 ">
+                <div class="col-lg-6 form-iframe">
                     <!-- Contact Form -->
-                    <iframe src="https://worker.kwarp7.net/IO/PCF.aspx" title="description"></iframe>
+                    <iframe src="https://worker.kwarp7.net/IO/PCF.aspx" title="Formulario de contacto" height="100%" width="90%" frameborder="0" style="border:0; display: block;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     <!-- end of contact form -->
                 </div>
                 <!-- end of col -->
@@ -356,7 +356,7 @@
                 <div class="col-lg-12 ">
                     <div class="footer-col first ">
                         <h6>Sobre ADD</h6>
-                        <p class="p-small ">Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer por ellos.</p>
+                        <p class="p-small ">Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer.</p>
                     </div>
                     <!-- end of footer-col -->
                     <div class="footer-col second ">
