--- a/parking.html
+++ b/parking.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer por ellos.">
+    <meta name="description" content="Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer.">
     <meta name="author" content="ADD S.A.">
 
     <!-- Webpage Title -->
@@ -120,12 +120,13 @@
                         </li>
                     </ul>
                 </div>
+                <p><a href="https://addsa.com.ar/estacionamiento-guiado.html">Estacionamiento Guiado</a></p>
             </div>
             <div class="col-lg-6">
                 <ul class="list-unstyled li-space-lg">
                     <li class="media">
                         <i class="fas">&bullet;</i>
-                        <div class="media-body">Sistema de Estacionamiento (Aeropuertos, Shopping, Cocheras / Parking)</div>
+                        <div class="media-body">Estacionamientos (Aeropuertos, Shopping, Cocheras / Parking)</div>
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
@@ -287,7 +288,7 @@
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
-                        <div class="media-body">Generar los <a href="">asientos contables</a> de la facturación y cobranzas.</div>
+                        <div class="media-body">Generar los <a href="erp.html">asientos contables</a> de la facturación y cobranzas.</div>
                     </li>
                     <li class="media">
                         <i class="fas">&bullet;</i>
@@ -1210,7 +1211,7 @@
                 <div class="col-lg-12 ">
                     <div class="footer-col first ">
                         <h6>Sobre ADD</h6>
-                        <p class="p-small ">Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer por ellos.</p>
+                        <p class="p-small ">Somos apasionados por la tecnología. Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer.</p>
                     </div>
                     <!-- end of footer-col -->
                     <div class="footer-col second ">
