Modification Contact Form margins/width

--- a/index.html
+++ b/index.html
@@ -330,13 +330,13 @@
                 <div class="col-lg-6 ">
                     <div class="map-responsive ">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.8203520736247!2d-58.39008428491957!3d-34.608703980458216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac4b41af1c1%3A0x4b8c1fdbb6995699!2sRivadavia%201523%2C%20C1085%20CABA!5e0!3m2!1sen!2sar!4v1611790395011!5m2!1sen!2sar"
-                            width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                            title="Ubicación" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     </div>
                 </div>
                 <!-- end of col -->
                 <div class="col-lg-6 form-iframe">
                     <!-- Contact Form -->
-                    <iframe src="https://worker.kwarp7.net/IO/PCF.aspx" title="Formulario de contacto" height="650px" width="100%" frameborder="0" style="border:0; display: block;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <iframe src="https://worker.kwarp7.net/IO/PCF.aspx" title="Formulario de contacto" height="650px" width="420px" frameborder="0" style="border:0; display: block;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     <!-- end of contact form -->
                 </div>
                 <!-- end of col -->
