Margins Cont-Form

--- a/index.html
+++ b/index.html
@@ -319,8 +319,8 @@
                     <h2 class="h2-heading ">¿Quiere saber más? ¡Escríbanos!</h2><br>
                     <ul class="list-unstyled li-space-lg ">
                         <li><img src="images/adress-icon.png" alt="Dirección"> Av. Rivadavia 1523, Buenos Aires, ARG</li>
-                        <li><img src="images/whatsapp-icon.png" alt="WhatsApp"> <a href="https://wa.me/5491131698888">+54(11) 3169-8888</a></li>
-                        <li><img src="images/mail-icon.png" alt="Mail"> <a href="https://mailto:info@addsa.com.ar">info@addsa.com.ar</a></li>
+                        <li><img src="images/whatsapp-icon.png" alt="WhatsApp"> <a target="_blank" href="https://wa.me/5491131698888">+54(11) 3169-8888</a></li>
+                        <li><img src="images/mail-icon.png" alt="Mail"> <a target="_blank" href="https://mailto:info@addsa.com.ar">info@addsa.com.ar</a></li>
                     </ul>
                 </div>
                 <!-- end of col -->
@@ -336,7 +336,7 @@
                 <!-- end of col -->
                 <div class="col-lg-6 form-iframe">
                     <!-- Contact Form -->
-                    <iframe src="https://worker.kwarp7.net/IO/PCF.aspx" title="Formulario de contacto" height="650px" width="420px" frameborder="0" style="border:0; display: block;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <iframe src="https://worker.kwarp7.net/IO/PCF.aspx" title="Formulario de contacto" height="650px" width="100%" frameborder="0" style="border:0; display: block;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                     <!-- end of contact form -->
                 </div>
                 <!-- end of col -->
