Margin + link errors

--- a/contacto.html
+++ b/contacto.html
@@ -94,7 +94,7 @@
                     <ul class="list-unstyled li-space-lg ">
                         <li><img src="images/adress-icon.png" alt="Dirección"> Av. Rivadavia 1523, Buenos Aires, ARG</li>
                         <li><img src="images/whatsapp-icon.png" alt="WhatsApp"> <a target="_blank" href="https://wa.me/5491131698888">+54(11) 3169-8888</a></li>
-                        <li><img src="images/mail-icon.png" alt="Mail"> <a target="_blank" href="https://mailto:info@addsa.com.ar">info@addsa.com.ar</a></li>
+                        <li><img src="images/mail-icon.png" alt="Mail"> <a target="_blank" href="mailto:info@addsa.com.ar">info@addsa.com.ar</a></li>
                     </ul>
                 </div>
                 <!-- end of col -->
