--- a/nosotros.html
+++ b/nosotros.html
@@ -138,7 +138,7 @@
 
 
     <!-- Principios -->
-    <div id="historia">
+    <div id="principios">
         <div class="container solutions-sections">
             <div class="row">
                 <div class="col-lg-12">
