--- a/nosotros.html
+++ b/nosotros.html
@@ -80,126 +80,120 @@
     <!-- end of navigation -->
 
     <!-- History -->
-    <div id="historia">
-        <div class="container solutions-sections">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2>QUIENES SOMOS</h2>
-                    <hr>
-                    <p><b>Somos apasionados por la tecnología.</b> Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer.</p>
-                    <p>Desde hace más de 30 años -incluso antes de ser ADD- estamos haciendo lo que sabemos hacer mejor: programando soluciones y uniendo objetos físicos con software (que ahora tiene un nombre, “internet de las cosas”, IdC, o IoT por sus
-                        siglas en inglés “Internet of Things”). </p>
-                    <p>Fuimos pioneros en sistemas de parking con código de barras, en telepeaje en 1995, en nuestra solución de factura electrónica en el 2006. Nos enorgullece decir que conjugamos la <b>solidez</b> de <b>muchos años de experiencia</b> con
-                        la <b>velocidad</b> de cambio necesaria para <b>adaptar continuamente nuestras soluciones</b> y ofrecer siempre opciones de avanzada.</p>
-                    <p><b>No ofrecemos sólo software:</b> ADD está conformada por un equipo de profesionales no sólo de diferentes ramas de sistemas y ciencias de la computación, sino también con conocimiento de procesos productivos, contabilidad, impuestos,
-                        comercialización y cadenas de suministro. Con estudios académicos y experiencia a nivel nacional e internacional, combinamos el conocimiento teórico y práctico de las empresas, con la capacidad para desarrollar soluciones a esos
-                        desafíos. Por eso nuestras soluciones se encuentran operando exitosamente desde hace años en los segmentos más diversos.</p>
-                    <p>Entendemos que <b>cada empresa es única</b>: conformamos el equipo de trabajo para cada proyecto según las circunstancias y los requerimientos necesarios y tenemos en cuenta no sólo parámetros operativos sino también a su posición
-                        financiera, económica, administrativa y jurídica. Evitamos pautas estandarizadas, pues creemos que cada caso merece ser analizado y tratado por sus rasgos propios, que deben ser valorados para planificar y brindar el servicio necesario,
-                        sin incurrir en costos o demoras innecesarias.</p>
-                    <p><b>Sea cual sea la solución que busca, cuente con nosotros, cuente con ADD.</b></p>
-                </div>
-                <!-- end of col -->
+    <div class="container solutions-sections" id="historia">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2>QUIENES SOMOS</h2>
+                <hr>
+                <p><b>Somos apasionados por la tecnología.</b> Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer.</p>
+                <p>Desde hace más de 30 años -incluso antes de ser ADD- estamos haciendo lo que sabemos hacer mejor: programando soluciones y uniendo objetos físicos con software (que ahora tiene un nombre, “internet de las cosas”, IdC, o IoT por sus siglas
+                    en inglés “Internet of Things”). </p>
+                <p>Fuimos pioneros en sistemas de parking con código de barras, en telepeaje en 1995, en nuestra solución de factura electrónica en el 2006. Nos enorgullece decir que conjugamos la <b>solidez</b> de <b>muchos años de experiencia</b> con la
+                    <b>velocidad</b> de cambio necesaria para <b>adaptar continuamente nuestras soluciones</b> y ofrecer siempre opciones de avanzada.</p>
+                <p><b>No ofrecemos sólo software:</b> ADD está conformada por un equipo de profesionales no sólo de diferentes ramas de sistemas y ciencias de la computación, sino también con conocimiento de procesos productivos, contabilidad, impuestos,
+                    comercialización y cadenas de suministro. Con estudios académicos y experiencia a nivel nacional e internacional, combinamos el conocimiento teórico y práctico de las empresas, con la capacidad para desarrollar soluciones a esos desafíos.
+                    Por eso nuestras soluciones se encuentran operando exitosamente desde hace años en los segmentos más diversos.</p>
+                <p>Entendemos que <b>cada empresa es única</b>: conformamos el equipo de trabajo para cada proyecto según las circunstancias y los requerimientos necesarios y tenemos en cuenta no sólo parámetros operativos sino también a su posición financiera,
+                    económica, administrativa y jurídica. Evitamos pautas estandarizadas, pues creemos que cada caso merece ser analizado y tratado por sus rasgos propios, que deben ser valorados para planificar y brindar el servicio necesario, sin incurrir
+                    en costos o demoras innecesarias.</p>
+                <p><b>Sea cual sea la solución que busca, cuente con nosotros, cuente con ADD.</b></p>
             </div>
-            <!-- end of row -->
+            <!-- end of col -->
         </div>
-        <!-- end of container -->
+        <!-- end of row -->
     </div>
+    <!-- end of container -->
     <!-- end of history -->
 
     <!-- Misión & Visión -->
-    <div id="misionvision" class="bg-gray ">
-        <div class="container bg-gray solutions-sections">
-            <div class="row ">
-                <div class="col-lg-6 ">
-                    <div class="card-image">
-                        <img class="img-fluid" src="images/Mission.png" alt="Mission" height="150px" width="150px">
-                    </div>
-                    <h2 class="h2-heading ">MISIÓN</h2>
-                    <br>
-                    <p>Proteger la inversión de nuestros clientes, extendiendo las soluciones que brindamos con nuevas funcionalidades y tecnologías.</p>
+    <div class="container bg-gray solutions-sections" id="misionvision">
+        <div class="row ">
+            <div class="col-lg-6 ">
+                <div class="card-image">
+                    <img class="img-fluid" src="images/Mission.png" alt="Mission" height="150px" width="150px">
                 </div>
-                <!-- end of col -->
-                <div class="col-lg-6 ">
-                    <div class="card-image">
-                        <img class="img-fluid" src="images/Vision.png" alt="Vision" height="150px" width="150px">
-                    </div>
-                    <h2 class="h2-heading ">VISIÓN</h2>
-                    <br>
-                    <p>Ser el proveedor de software elegido por las empresas por ser el que más valor les aporta en la optimización de su gestión estratégica.</p>
-                </div>
-                <!-- end of col -->
+                <h2 class="h2-heading ">MISIÓN</h2>
+                <br>
+                <p>Proteger la inversión de nuestros clientes, extendiendo las soluciones que brindamos con nuevas funcionalidades y tecnologías.</p>
             </div>
-            <!-- end of row -->
+            <!-- end of col -->
+            <div class="col-lg-6 ">
+                <div class="card-image">
+                    <img class="img-fluid" src="images/Vision.png" alt="Vision" height="150px" width="150px">
+                </div>
+                <h2 class="h2-heading ">VISIÓN</h2>
+                <br>
+                <p>Ser el proveedor de software elegido por las empresas por ser el que más valor les aporta en la optimización de su gestión estratégica.</p>
+            </div>
+            <!-- end of col -->
         </div>
-        <!-- end of container -->
+        <!-- end of row -->
     </div>
+    <!-- end of container -->
     <!-- end of Misión & Visión -->
 
 
     <!-- Principios -->
-    <div id="principios">
-        <div class="container solutions-sections">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h2>PRINCIPIOS</h2>
-                    <hr>
-                    <ul class="list-unstyled li-space-lg">
-                        <li class="media">
-                            <div class="media-body">
-                                <h5>Excelencia técnica</h5>
-                                <p>Nos actualizamos permanentemente, y mantenemos altos estándares de capacitación técnica y científica.</p>
-                            </div>
+    <div class="container solutions-sections" id="principios">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2>PRINCIPIOS</h2>
+                <hr>
+                <ul class="list-unstyled li-space-lg">
+                    <li class="media">
+                        <div class="media-body">
+                            <h5>Excelencia técnica</h5>
+                            <p>Nos actualizamos permanentemente, y mantenemos altos estándares de capacitación técnica y científica.</p>
+                        </div>
 
-                        </li>
-                        <li class="media">
-                            <div class="media-body">
-                                <h5>Valoramos la diversidad</h5>
-                                <p>Cada empresa es única, no metemos a todos en una caja sino que desarrollamos soluciones flexibles que se adapten a las necesidades de cada cliente, teniendo en cuenta no sólo aspectos técnicos sino también económico-financieros,
-                                    jurídicos, etc.</p>
-                            </div>
-                        </li>
-                        <li class="media">
-                            <div class="media-body">
-                                <h5>Brindamos soluciones</h5>
-                                <p>Nuestra empresa está conformada por profesionales formados y con experiencia no sólo en sistemas y ciencias de la computación, sino también con conocimiento de procesos productivos, contabilidad, impuestos, comercialización
-                                    y cadenas de suministro, lo que nos permite un abordaje integral. No sólo ofrecemos software: solucionamos problemas de negocio.</p>
-                            </div>
-                        </li>
-                        <li class="media">
-                            <div class="media-body">
-                                <h5>Somos innovadores</h5>
-                                <p>Nuestras soluciones evolucionan continuamente y se adaptan en forma dinámica a un entorno en permanente cambio.</p>
-                            </div>
-                        </li>
-                        <li class="media">
-                            <div class="media-body">
-                                <h5>Agregamos valor</h5>
-                                <p>A nuestros clientes a través de la optimización por medio de software y automatización de los diferentes procesos que llevan a cabo y a nuestra propia empresa a través de la mejora continua de nuestros procesos y de nuestro
-                                    crecimiento.
-                                </p>
-                            </div>
-                        </li>
-                        <li class="media">
-                            <div class="media-body">
-                                <h5>Relaciones de confianza</h5>
-                                <p>Clarificamos expectativas y cumplimos aquello a lo que nos comprometemos.</p>
-                            </div>
-                        </li>
-                        <li class="media">
-                            <div class="media-body">
-                                <h5>Actuamos con ética e integridad</h5>
-                                <p></p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-                <!-- end of col -->
+                    </li>
+                    <li class="media">
+                        <div class="media-body">
+                            <h5>Valoramos la diversidad</h5>
+                            <p>Cada empresa es única, no metemos a todos en una caja sino que desarrollamos soluciones flexibles que se adapten a las necesidades de cada cliente, teniendo en cuenta no sólo aspectos técnicos sino también económico-financieros,
+                                jurídicos, etc.</p>
+                        </div>
+                    </li>
+                    <li class="media">
+                        <div class="media-body">
+                            <h5>Brindamos soluciones</h5>
+                            <p>Nuestra empresa está conformada por profesionales formados y con experiencia no sólo en sistemas y ciencias de la computación, sino también con conocimiento de procesos productivos, contabilidad, impuestos, comercialización
+                                y cadenas de suministro, lo que nos permite un abordaje integral. No sólo ofrecemos software: solucionamos problemas de negocio.</p>
+                        </div>
+                    </li>
+                    <li class="media">
+                        <div class="media-body">
+                            <h5>Somos innovadores</h5>
+                            <p>Nuestras soluciones evolucionan continuamente y se adaptan en forma dinámica a un entorno en permanente cambio.</p>
+                        </div>
+                    </li>
+                    <li class="media">
+                        <div class="media-body">
+                            <h5>Agregamos valor</h5>
+                            <p>A nuestros clientes a través de la optimización por medio de software y automatización de los diferentes procesos que llevan a cabo y a nuestra propia empresa a través de la mejora continua de nuestros procesos y de nuestro
+                                crecimiento.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="media">
+                        <div class="media-body">
+                            <h5>Relaciones de confianza</h5>
+                            <p>Clarificamos expectativas y cumplimos aquello a lo que nos comprometemos.</p>
+                        </div>
+                    </li>
+                    <li class="media">
+                        <div class="media-body">
+                            <h5>Actuamos con ética e integridad</h5>
+                            <p></p>
+                        </div>
+                    </li>
+                </ul>
             </div>
-            <!-- end of row -->
+            <!-- end of col -->
         </div>
-        <!-- end of container -->
+        <!-- end of row -->
     </div>
+    <!-- end of container -->
     <!-- end of principios -->
 
 
