--- a/index.html
+++ b/index.html
@@ -174,59 +174,61 @@
     <!-- end of cards-1 -->
 
     <!-- Customers -->
-    <div class="container slider-1" id="clientes">
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="h2-heading ">Empresas que confian en nosotros</h2>
+    <div id="clientes" class="slider-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="h2-heading ">Empresas que confian en nosotros</h2>
 
-                <!-- Image Slider -->
-                <div class="slider-container">
-                    <div class="swiper-container image-slider">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <img class="img-fluid" src="images/customer-logo-1.png" alt="Plateanet">
+                    <!-- Image Slider -->
+                    <div class="slider-container">
+                        <div class="swiper-container image-slider">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <img class="img-fluid" src="images/customer-logo-1.png" alt="Plateanet">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="img-fluid" src="images/customer-logo-2.png" alt="Morph">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="img-fluid" src="images/customer-logo-3.png" alt="Aeration Argentina">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="img-fluid" src="images/customer-logo-4.png" alt="Sacheco">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="img-fluid" src="images/customer-logo-5.png" alt="La Salle">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="img-fluid" src="images/customer-logo-6.png" alt="Toyota">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="img-fluid" src="images/customer-logo-7.png" alt="Quilmes Cervecería">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="img-fluid" src="images/customer-logo-8.png" alt="Playas Subterráneas">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="img-fluid" src="images/customer-logo-9.png" alt="Iké Asistencia">
+                                </div>
+                                <div class="swiper-slide">
+                                    <img class="img-fluid" src="images/customer-logo-10.png" alt="Molino Cañuelas">
+                                </div>
                             </div>
-                            <div class="swiper-slide">
-                                <img class="img-fluid" src="images/customer-logo-2.png" alt="Morph">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="img-fluid" src="images/customer-logo-3.png" alt="Aeration Argentina">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="img-fluid" src="images/customer-logo-4.png" alt="Sacheco">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="img-fluid" src="images/customer-logo-5.png" alt="La Salle">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="img-fluid" src="images/customer-logo-6.png" alt="Toyota">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="img-fluid" src="images/customer-logo-7.png" alt="Quilmes Cervecería">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="img-fluid" src="images/customer-logo-8.png" alt="Playas Subterráneas">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="img-fluid" src="images/customer-logo-9.png" alt="Iké Asistencia">
-                            </div>
-                            <div class="swiper-slide">
-                                <img class="img-fluid" src="images/customer-logo-10.png" alt="Molino Cañuelas">
-                            </div>
+                            <!-- end of swiper-wrapper -->
                         </div>
-                        <!-- end of swiper-wrapper -->
+                        <!-- end of swiper container -->
                     </div>
-                    <!-- end of swiper container -->
-                </div>
-                <!-- end of slider-container -->
-                <!-- end of image slider -->
+                    <!-- end of slider-container -->
+                    <!-- end of image slider -->
 
+                </div>
+                <!-- end of col -->
             </div>
-            <!-- end of col -->
+            <!-- end of row -->
         </div>
-        <!-- end of row -->
+        <!-- end of container -->
     </div>
-    <!-- end of container -->
     <!-- end of slider-1 -->
     <!-- end of customers -->
 
