--- a/nosotros.html
+++ b/nosotros.html
@@ -60,7 +60,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nosotros</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="nosotros.html#historia">Quienes somos</a>
+                            <a class="dropdown-item" href="nosotros.html">Quienes somos</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="nosotros.html#misionvision">Misión y Visión</a>
                             <div class="dropdown-divider"></div>
