href problems beta testing

--- a/nosotros.html
+++ b/nosotros.html
@@ -83,7 +83,7 @@
     <div class="container solutions-sections" id="historia">
         <div class="row">
             <div class="col-lg-12">
-                <h2>QUIENES SOMOS</h2>
+                <h1>QUIENES SOMOS</h1>
                 <hr>
                 <p><b>Somos apasionados por la tecnología.</b> Desarrollamos soluciones que ayudan a los negocios a crecer y a las personas a tener más tiempo libre para aquello que las máquinas no pueden hacer.</p>
                 <p>Desde hace más de 30 años -incluso antes de ser ADD- estamos haciendo lo que sabemos hacer mejor: programando soluciones y uniendo objetos físicos con software (que ahora tiene un nombre, “internet de las cosas”, IdC, o IoT por sus siglas
@@ -137,7 +137,7 @@
     <div class="container solutions-sections" id="principios">
         <div class="row">
             <div class="col-lg-12">
-                <h2>PRINCIPIOS</h2>
+                <h2 class="h2-heading">PRINCIPIOS</h2>
                 <hr>
                 <ul class="list-unstyled li-space-lg">
                     <li class="media">
