--- a/parking.html
+++ b/parking.html
@@ -82,7 +82,7 @@
     <div class="container solutions-sections">
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="h1-medium">Parking</h1>
+                <h1>Parking</h1>
                 <hr>
                 <p>Es la solución de <i>Automatización y Gestión de Estacionamiento</i> <b>más avanzada</b> del mercado. Esta afirmación se ve avalada por el hecho de que ha sido adoptada por los más importantes Parkings de la ciudad de Buenos Aires, que
                     poseen una rotación de vehículos comparable con las más grandes ciudades del mundo.</p>
